[package]
name = "pdf_unlocker"
version = "4.1.0"
authors = ["Sayantan <sayantanbiswas.mycareer@gmail.com>"]
edition = "2021"
description = "High-performance multi-threaded PDF password recovery tool with pattern matching."
license = "MIT"
repository = "https://github.com/yo-sayantan/PDF-Unlocker-Pro"

[dependencies]
lopdf = "0.32"
anyhow = "1.0"
rayon = "1.8"
chrono = "0.4"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[[bin]]
name = "pdf_unlocker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[build-dependencies]
winres = "0.1"
